--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   flutter_sticky_widgets: ^0.0.3
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
